--- a/small-business.css
+++ b/small-business.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    08/05/2024
+Last change:    10/06/2024
 Author:    creativemaze
 Primary use:    Small Business
 -------------------------------------------------------------------*/
@@ -894,9 +894,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	left: 20px;
 }
 
-.grid_icon span.icon-60{
-	font-size: 60px;
-	font-weight: 100;
+.grid_icon .fi{
+	font-size: 48px;
 	color: #ffffff;
 	display: inline-block;
 	text-align: center;
@@ -1248,9 +1247,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 80%;
 }
 
-.square_icon span.icon-65{
-	font-size: 65px;
-	font-weight: 100;
+.square_icon .fi{
+	font-size: 48px;
 	color: #83a4d4;
 	display: inline-block;
 	text-align: left;
@@ -1266,7 +1264,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	line-height: 1.4em;
 	margin: 0;
-	padding-top: 11px;
+	padding-top: 4px;
 }
 
 .square_title p{
