--- a/bakery.css
+++ b/bakery.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    04/05/2024
+Last change:    10/06/2024
 Author:    creativemaze
 Primary use:    Bakery
 -------------------------------------------------------------------*/
@@ -663,24 +663,22 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	z-index: 999;
 }
 
-.prev_slide,
-.next_slide{
-	font-size: 50px;
-	font-weight: 700;
+.prev_slide .fi,
+.next_slide .fi{
+	font-size: 38px;
 	transition: 0.6s ease;
-	width: auto;
 	display: inline-block;
 	overflow: hidden;
 	color: #71b280;
 	cursor: pointer;
 }
 
-.prev_slide{
+.prev_slide .fi{
 	margin-right: 15px;
 }
 
-.next_slide:hover,
-.prev_slide:hover{
+.next_slide .fi:hover,
+.prev_slide .fi:hover{
 	color: #111111;
 }
 
@@ -828,7 +826,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 20px 0;
 }
 
-.square_list > ul > li::first-letter{
+.square_list > ul > li .first-letter{
 	background-color: #71b280;
 	padding: 12px 14px;
 	color: #ffffff;
@@ -885,9 +883,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	position: relative;
 	z-index: 999;
 	max-width: 1400px;
-	margin: -325px auto;
+	margin: -325px auto 9em;
 	padding: 0 20px;
-	margin-bottom: calc(9em - 40px);
 }
 
 .bakery_group_four{
@@ -988,73 +985,130 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex-wrap: wrap;
 }
 
-.icon_col{
-	flex: 25%;
-	width: 25%;
-	padding: 40px 25px 0;
-}
-
-.icon_box{
-	max-width: 320px;
-	margin: 0 auto;
+.icon_area{
 	width: 100%;
-	position: relative;
+	display: flex;
+	flex-wrap: wrap;
 }
 
-.icon_symbol span.icon-65{
-	font-size: 65px;
-	font-weight: 100;
-	background-color: #71b280;
-	color: #ffffff;
-	display: inline-block;
-	text-align: center;
-	padding: 9px;
+.left_info_col{
+	flex: 66.66%;
+	width: 66.66%;
+	padding: 0 25px;
+	margin: 0 auto 0;
 }
 
-.icon_info{
-	padding: 15px 0 0 0;
+.right_info_col{
+	flex: 33.33%;
+	width: 33.33%;
+	max-width: 500px;
+	padding: 30px 35px 40px 25px;
+	background-color: #ffffff;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	margin-top: 0;
 }
 
-.icon_info h3{
+.info_center{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+.right_info_box h2{
 	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 18px;
-	font-weight: 600;
+	font-size: 40px;
+	font-weight: 800;
 	display: block;
-	text-align: center;
 	color: #111111;
+	text-align: left;
 	letter-spacing: 1px;
-	line-height: 1.4em;
-	margin: 0;
+	line-height: 1.2em;
+	margin-top: 0;
 }
 
-.icon_info p{
+.right_info_box p{
 	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
+	font-size: 16px;
 	font-weight: normal;
 	display: block;
 	color: #696969;
 	letter-spacing: 1px;
-	text-align: center;
+	text-align: left;
+	padding: 12px 0;
 	line-height: 1.5em;
-	padding-top: 10px;
 }
 
-.icon_button a{
+.icon_col{
+	flex: 25%;
+	width: 25%;
+	padding: 0;
+}
+
+.icon_box{
+	max-width: 215px;
+	margin: auto;
+	padding: 20px 10px 25px;
+	text-align: center;
+	background-color: #ffffff;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	overflow: hidden;
+}
+
+.icon_bottom{
+	margin-top: 197px;
+}
+
+.icon_symbol{
+	position: relative;
+	top: -60px;
+	left: -60px;
+	width: 120px;
+	height: 120px;
+	background-color: #71b280;
+	border-radius: 50%;
+	overflow: hidden;
+	margin-bottom: -55px;
+}
+
+.icon_symbol .fi{
+	font-size: 38px;
+	color: #ffffff;
+	display: inline-block;
+	text-align: left;
+	position: absolute;
+	right: 20px;
+	bottom: 10px
+}
+
+.icon_content h3{
+	color: #111111;
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: 600;
+	display: block;
+	text-align: center;
+	letter-spacing: 1px;
+	line-height: 1.5em;
+	margin-top: 0;
+}
+
+.area_button a{
 	font-family: 'Raleway' , Arial, sans-serif;
 	font-size: 13px;
 	font-weight: 600;
 	letter-spacing: 1px;
 	text-align: center;
 	text-transform: uppercase;
-	display: block;
+	display: inline-block;
 	color: #71b280;
 	text-decoration: none;
-	max-width: 105px;
-	margin: 0 auto;
+	max-width: 115px;
+	margin: auto;
 	transition: 0.5s;
 }
 
-.icon_button a::after{
+.area_button a::after{
 	content: "\203A";
 	position: relative;
 	top: 1px;
@@ -1063,8 +1117,32 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-left: 5px;
 }
 
-.icon_button a:hover{
+.area_button a:hover{
 	color: #111111;
+}
+
+.info_col_button a{
+	background-color: #71b280;
+	width: 160px;
+	margin: 25px 0 0;
+    color: #ffffff;
+    padding: 13px 15px;
+    text-decoration: none;
+	text-transform: uppercase;
+    display: block;
+    font-size: 13px;
+	font-weight: 600;
+	font-family: 'Raleway', Arial, sans-serif;
+    transition: 0.5s;
+	border: 1px solid #71b280;
+	letter-spacing: 1px;
+	text-align: center;
+}
+
+.info_col_button a:hover{
+	color: #ffffff;
+	background: transparent;
+	border-color: #ffffff;
 }
 
 /* --- 3.6. Bakery Area Six --- */
@@ -1509,9 +1587,9 @@ a.blog_btn:hover{
 }
 
 .client_comment p{
-	font-family: 'Raleway', Arial, sans-serif;
+	font-family: 'Roboto', Arial, sans-serif;
 	font-size: 16px;
-	font-weight: 500;
+	font-weight: normal;
 	display: inline-block;
 	color: #696969;
 	letter-spacing: 1px;
@@ -1575,9 +1653,8 @@ a.blog_btn:hover{
 	padding-top: 8px;
 }
 
-.client_icon span.icon-25{
-	font-size: 25px;
-	font-weight: 300;
+.client_icon .fi{
+	font-size: 22px;
 	color: #71b280;
 	display: inline-block;
 	text-align: center;
@@ -1954,9 +2031,16 @@ a.footer-logo img{
 		margin-bottom: 9em;
 	}
 	
-	.icon_col{
-		flex: 50%;
-		width: 50%;
+	.left_info_col{
+		flex: 100%;
+		width: 100%;
+	}
+	
+	.right_info_col{
+		flex: 100%;
+		width: 100%;
+		margin-top: 50px;
+		max-width: 450px;
 	}
 	
 	.cube_col{
@@ -1971,7 +2055,6 @@ a.footer-logo img{
 	
 	.video-play-button{
 		margin-top: 90px;
-		
 	}
 	
 	.bakery_area_six{
@@ -2023,6 +2106,7 @@ a.footer-logo img{
 	.bakery_heading,
 	.area_head h2,
 	.square_box h2,
+	.right_info_box h2,
 	.cube_box h2,
 	.bg_head,
 	.review_head h2{
@@ -2063,8 +2147,13 @@ a.footer-logo img{
 	}
 	
 	.icon_col{
-		flex: 100%;
-		width: 100%;
+		flex: 50%;
+		width: 50%;
+		max-width: 200px;
+	}
+	
+	.icon_box{
+		max-width: 200px;
 	}
 
 	.blog_col{
@@ -2097,6 +2186,7 @@ a.footer-logo img{
 @media only screen and (max-width: 420px){
 	.blog_col,
 	.grid_col,
+	.left_info_col,
 	.client_col{
 		padding-left: 0;
 		padding-right: 0;
@@ -2145,5 +2235,15 @@ a.footer-logo img{
 	.square_color_box{
 		width: 220px;
 		height: 220px;
+	}
+	
+	.icon_col{
+		flex: 100%;
+		width: 100%;
+		max-width: 200px;
+	}
+	
+	.icon_bottom{
+		margin-top: 0;
 	}
 }
