--- a/consulting.css
+++ b/consulting.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    18/05/2024
+Last change:    24/06/2024
 Author:    creativemaze
 Primary use:    Consulting
 -------------------------------------------------------------------*/
@@ -547,7 +547,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .icon_symbol .fi{
-font-size: 44px;
+	font-size: 44px;
 	width: 75px;
 	height: 75px;
 	background-color: #ec2f4b;
@@ -684,7 +684,7 @@ font-size: 44px;
 	color: #696969;
 	letter-spacing: 1px;
 	text-align: left;
-	padding: 15px 0;
+	padding-top: 15px;
 	line-height: 1.5em;
 }
 
@@ -709,7 +709,7 @@ font-size: 44px;
 	font-size: 26px;
 	font-weight: 100;
 	position: relative;
-	top: 10px;
+	top: 8px;
 	padding-right: 12px;
 	color: #ec2f4b;
 }
@@ -744,7 +744,7 @@ font-size: 44px;
 	flex: 33.33%;
 	width: 33.33%;
 	max-width: 220px;
-	height: 85px;
+	height: 80px;
 }
 
 .first_border{
@@ -1090,24 +1090,24 @@ font-size: 44px;
 	align-items: center;
 }
 
-.prev_nav,
-.next_nav{
-	font-size: 50px;
-	font-weight: 700;
+.prev_nav .fi,
+.next_nav .fi{
+	font-size: 38px;
 	transition: 0.6s ease;
 	width: auto;
 	display: inline-block;
 	overflow: hidden;
 	color: #ec2f4b;
 	cursor: pointer;
+	margin-top: 22px;
 }
 
-.prev_nav{
-	margin-right: 25px;
+.prev_nav .fi{
+	margin-right: 20px;
 }
 
-.next_nav:hover,
-.prev_nav:hover{
+.next_nav .fi:hover,
+.prev_nav .fi:hover{
 	color: #111111;
 }
 
