--- a/start-up.css
+++ b/start-up.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    21/05/2024
+Last change:    26/06/2024
 Author:    creativemaze
 Primary use:    Start-Up
 -------------------------------------------------------------------*/
@@ -108,6 +108,19 @@ h2{
 	margin-left: auto;
 }
 
+.bg_head{
+	color: #ffffff;
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 40px;
+	font-weight: 700;
+	display: block;
+	text-align: center;
+	letter-spacing: 1px;
+	line-height: 1.2em;
+	max-width: 650px;
+	margin: auto;
+}
+
 .start-up_info{
 	font-family: 'Roboto' , Arial, sans-serif;
 	font-size: 16px;
@@ -148,7 +161,7 @@ h2{
 	max-width: 160px; 
 	min-height: 10px;
 	position: relative;
-	top: 30px;
+	top: 33px;
 }
 
 #nav-logo > a img{
@@ -562,7 +575,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 18px;
 	font-weight: normal;
 	display: block;
-	color: #f2f2f2;
+	color: #dddddd;
 	line-height: 1.5em;
 	letter-spacing: 1px;
 	text-align: center;
@@ -836,7 +849,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 26px;
 	font-weight: 100;
 	position: relative;
-	top: 10px;
+	top: 8px;
 	padding-right: 12px;
 	color: #159957;
 }
@@ -977,24 +990,23 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-top: 100px;
 }
 
-.prev_slide,
-.next_slide{
-	font-size: 50px;
-	font-weight: 700;
+.prev_slide .fi,
+.next_slide .fi{
+	font-size: 38px;
 	transition: 0.6s ease;
-	width: auto;
+	max-width: 160px;
 	display: inline-block;
 	overflow: hidden;
 	color: #159957;
 	cursor: pointer;
 }
 
-.prev_slide{
+.prev_slide .fi{
 	margin-right: 15px;
 }
 
-.next_slide:hover,
-.prev_slide:hover{
+.next_slide .fi:hover,
+.prev_slide .fi:hover{
 	color: #111111;
 }
 
@@ -1618,26 +1630,13 @@ a.blog_btn:hover{
 	border-left: solid 5px #159957;
 }
 
-.bg_head{
-	color: #ffffff;
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	display: block;
-	text-align: center;
-	letter-spacing: 1px;
-	line-height: 1.2em;
-	max-width: 650px;
-	margin: auto;
-}
-
 .client_col{
-	padding: 0 25px
+	padding: 0 20px
 }
 
 .client_comment p{
 	font-family: 'Roboto', Arial, sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: normal;
 	display: inline-block;
 	color: #696969;
@@ -2137,7 +2136,7 @@ a.footer-logo img{
 	.slidenav{
 		flex: 100%;
 		width: 100%;
-		margin-top: 0;
+		margin-top: 10px;
 	}
 	
 	.photo_col{
@@ -2343,7 +2342,7 @@ a.footer-logo img{
 	
 	.slide_info p{
 		font-size: 14px;
-		padding-top: 12px;
+		padding-top: 10px;
 		padding-left: 8px;
 		padding-right: 8px;
 	}
@@ -2361,7 +2360,7 @@ a.footer-logo img{
 	}
 	
 	.client_col{
-		padding: 0 15px;
+		padding: 0 10px;
 	}
 	
 	.grid_slide{
@@ -2375,7 +2374,12 @@ a.footer-logo img{
 	}
 	
 	.slide_info p{
-		font-size: 12px
+		font-size: 12px;
+		padding-top: 8px;
+	}
+	
+	.video-play-button{
+		margin-top: 90px;
 	}
 
 	.inner_area h3{
@@ -2394,10 +2398,6 @@ a.footer-logo img{
 	
 	.col_head h3{
 		font-size: 20px;
-	}
-	
-	.video-play-button{
-		margin-top: 90px;
 	}
 	
 	.inner_area h3{
